# pypackager

./: .gitignore  CMakeLists.txt  pyproject.toml
app/: __main__.py  main.py
src/: main.c
